--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <br>
   <div style="padding: 5rem;">
     <input type="submit" name="Submit" value="Save" style="position: relative; position: absolute; left: 40%;  padding: 0.5rem;">
-    <input type="submit" name="register" value="Register"  style="position": relative; position: absolute; left: 48% ; padding: 0.5rem; onclick='location.replace("register.php")'>
+    <input type="submit" name="register" value="Register"  style="position: relative; position: absolute; left: 48% ; padding: 0.5rem; "onclick='location.replace("register.php")'>
   </div>
   
     
