--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <title>login</title>
+<link rel="stylesheet" href="allpaint.css">
 <style>
    body{
         background-image: url(/picture/BG.JPG);
@@ -30,8 +31,8 @@
   </table>
   <br>
   <div style="padding: 5rem;">
-    <input type="submit" name="Submit" value="Save" style="position: relative; position: absolute; left: 40%;  padding: 0.5rem;">
-    <input type="submit" name="register" value="Register"  style="position: relative; position: absolute; left: 48% ; padding: 0.5rem; "onclick='location.replace("register.php")'>
+    <input class =" hoverlink" type="submit" name="Submit" value="Save" style="position: relative; position: absolute; left: 40%;  padding: 0.5rem;">
+    <input class =" hoverlink" type="submit" name="register" value="Register"  style="position: relative; position: absolute; left: 48% ; padding: 0.5rem; "onclick='location.replace("register.php")'>
   </div>
   
     
